# linalg

./: Cargo.toml
src/: alg.rs  balance_chem_eq.rs  balance_diet.rs  curves_2d.rs  curves_3d.rs  electrical_network.rs  functions.rs  gui.rs  lines_2d.rs  lines_3d.rs  main.rs  rotator.rs  scratchpad_3d.rs  system_2d.rs  system_3d.rs  vectors_2d_system.rs  wave.rs  wave_gui.rs
