[package]
name = "linear_alg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = "0.14.0-rc.2"
bevy = { version = "0.13.2" }
nalgebra = { version = "0.32" }
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
faer = "0.19.0"
